# web-swap

./: README.org
clnt-cljs/: README.md  project.clj
clnt-cljs/resources/public/: index.html
clnt-cljs/src/clnt_cljs/: core.cljs  state.cljs  swap.cljs
clnt-elm/: Main.elm  Swap.elm  elm-package.json
srv-clojure/: .lein-repl-history  LICENSE  README.md  project.clj
srv-clojure/src/srv_clojure/: core.clj  crypto.clj  groups.clj  token.clj
srv-hs-scotty/: LICENSE  srv-hs-scotty.cabal  stack.yaml
