name: srv-hs-scotty
version: 0.1.0.0
synopsis: An implementation of the swap server in Haskell/Scotty
homepage: https://github.com/magthe/web-swap
license: BSD2
license-file: LICENSE
author: Magnus Therning
maintainer: magnus@therning.org
category: Web
build-type: Simple
cabal-version: >=1.10

executable srv-hs-scotty
  main-is: Main.hs
  build-depends: base
  hs-source-dirs: src
  default-language: Haskell2010
